prevent overlapping divs, new profile pic

--- a/style.css
+++ b/style.css
@@ -16,15 +16,16 @@ body {
 .block-left {
     float: left;
     padding-right: 0px;
-    width: 20%;
+    width: 15%;
+	clear: both;
 }
 
 .block-right
 {
-	float: right;
-	padding-right: 20px;
+	float: left;
 	width: 70%;
 	padding-top: 10%;
+	padding-left: 5%;
 }
 
 .bio {
@@ -70,5 +71,5 @@ body {
 }
 
 .profile-picture {
-  border-radius: 50%;
+  border-radius: 25px;
 }
